added ai server for local service

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,9 +10,11 @@ DATABASE_URL=sqlite:./database/learning.db
 AI_SERVICE=local
 
 # Local AI (Ollama) - FREE
+
+JWT_SECRET=your-secret-key
+
 OLLAMA_URL=http://localhost:11434
 OLLAMA_MODEL=llama2
-
 # OpenAI - PAID (uncomment if using)
 # OPENAI_API_KEY=your-key-here
 
