--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,16 +7,17 @@ DATABASE_URL=sqlite:./database/learning.db
 
 # AI Service Configuration
 # Options: local, openai, anthropic
-AI_SERVICE=local
+AI_SERVICE=GEMINI
 
 # Local AI (Ollama) - FREE
 
 JWT_SECRET=your-secret-key
 
-OLLAMA_URL=http://localhost:11434
-OLLAMA_MODEL=llama2
+#OLLAMA_URL=http://localhost:11434
+#OLLAMA_MODEL=llama2
 # OpenAI - PAID (uncomment if using)
 # OPENAI_API_KEY=your-key-here
+GEMINI_API_KEY=AIzaSyB5OmbrT9xA915-CcLGPgnWIl65nn3P7vQ
 
 # Anthropic - PAID (uncomment if using)
 # ANTHROPIC_API_KEY=your-key-here
